--- a/ui/index.html
+++ b/ui/index.html
@@ -147,7 +147,7 @@
           class="portfolio__item"
         >
           <img
-            src="img/juice-for-weight-loss__1594504161_105.178.110.26.jpg"
+            src="img/portfolio-01.jpg"
             alt="weight loss and health motivation"
             class="portfolio__img"
           />
