--- a/ui/index.html
+++ b/ui/index.html
@@ -4,7 +4,8 @@
     <link rel="stylesheet" href="normalize.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DevJane Portfolio Website</title>
+    <title>Gilbert Tek</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/log-icon.ico" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css"
@@ -25,9 +26,9 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header>
+    <header style="background-color: #f4f4f4;">
       <div class="logo">
-        <img src="img/devjane.png" alt="" />
+        <img src="img/gilbert-tek-log.png" alt="Gilbert Tek logo" />
       </div>
       <button class="nav-toggle" aria-label="toggle navigation">
         <span class="hamburger"></span>
@@ -204,7 +205,7 @@
     <footer class="footer">
       <!-- replace with your own email address -->
       <a href="mailto:gilbert@gilberttech.com" class="footer__link"
-        >gilbert@gilberttech.com</a
+        >gilbert@gilberttek.com</a
       >
       <ul class="social-list">
         <li class="social-list__item">
