--- a/ui/index.html
+++ b/ui/index.html
@@ -179,8 +179,8 @@
     <!-- Footer -->
     <footer class="footer">
       <!-- replace with your own email address -->
-      <a href="mailto:gilbert@gilberttech.com" class="footer__link"
-        >gilbert@gilberttek.com</a
+      <a href="mailto:gilbeltelnino@gmail.com" class="footer__link"
+        >gilbeltelnino@gmail.com</a
       >
       <ul class="social-list">
         <li class="social-list__item">
