adding portfolio website

--- a/ui/index.html
+++ b/ui/index.html
@@ -148,30 +148,34 @@
           class="portfolio__item"
         >
           <img
-            src="img/portfolio-01.jpg"
+            src="img/wei-port.PNG"
             alt="weight loss and health motivation"
             class="portfolio__img"
           />
         </a>
 
         <!-- Portfolio item 02 -->
+        <a href="https://multpurpose.netlify.app" class="portfolio__item">
+          <img src="img/mult.PNG" alt="G20" class="portfolio__img" />
+        </a>
+        <!-- Portfolio item 03 -->
+        <a href="https://https://rapids.netlify.app" class="portfolio__item">
+          <img src="img/rp.PNG" alt="G20" class="portfolio__img" />
+        </a>
+        <!-- Portfolio item 04 -->
         <a
           href="https://gilbertelnino.github.io/g20/index.html"
           class="portfolio__item"
         >
-          <img src="img/portfolio-02.jpg" alt="G20" class="portfolio__img" />
+          <img src="img/g2.PNG" alt="G20" class="portfolio__img" />
         </a>
 
-        <!-- Portfolio item 03 -->
+        <!-- Portfolio item 05 -->
         <a
           href="https://gilbertelnino.github.io/NGEB2020/User%20Interface/"
           class="portfolio__item"
         >
-          <img
-            src="img/portfolio-03.jpg"
-            alt="NGEB2020"
-            class="portfolio__img"
-          />
+          <img src="img/ng.PNG" alt="NGEB2020" class="portfolio__img" />
         </a>
       </div>
     </section>
