--- a/font/index.html
+++ b/font/index.html
@@ -40,7 +40,7 @@
             <a href="#services" class="nav__link">My Services</a>
           </li>
           <li class="nav__item">
-            <a href="#about" class="nav__link">About me</a>
+            <a href="#about" class="nav__link">About Me</a>
           </li>
           <li class="nav__item">
             <a href="#work" class="nav__link">My Work</a>
