--- a/font/index.html
+++ b/font/index.html
@@ -159,10 +159,17 @@
           <img src="img/mult.PNG" alt="G20" class="portfolio__img" />
         </a>
         <!-- Portfolio item 03 -->
-        <a href="https://https://rapids.netlify.app" class="portfolio__item">
+        <a href="https://rapids.netlify.app/" class="portfolio__item">
           <img src="img/rp.PNG" alt="G20" class="portfolio__img" />
         </a>
         <!-- Portfolio item 04 -->
+        <a href="https://redstoreec.netlify.app/" class="portfolio__item">
+          <img
+            src="./img/redstore-ec.png"
+            alt="redstore e-commerce"
+            class="portfolio__img"
+          />
+        </a>
         <a
           href="https://gilbertelnino.github.io/g20/index.html"
           class="portfolio__item"
