--- a/font/index.html
+++ b/font/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="normalize.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Hi, My name is Ndatimana Gilbert a Software Developer with over two years of experience in coding, designing, testing software, and Optimizing page load speeds. As a full-stack software developer, my objectives are to make a positive impact on clients, co-workers, and the internet using my skills and experience to design and built compelling and attractive web applications." />
     <title>Gilbert Tek</title>
     <link rel="icon" type="image/png" sizes="32x32" href="./img/log-icon.ico" />
     <link
